# QStory

./: .gitignore  README.md  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/: AndroidManifest.xml
src/main/assets/: xposed_init
src/main/cpp/: CMakeLists.txt
src/main/cpp/DexBuilder/: README.md
src/main/cpp/DexBuilder/include/slicer/: dex_format.h
src/main/java/: RootData.java
src/main/java/ConfigTool/: DexFindTool.java  GlobalConfig.java  ListConfig.java  SimpleConfig.java
src/main/java/DexFinder/: DexHelperFinder.java  DexKitFinder.java  IDexFinder.java  SecurityChecker.java  SoLoader.java
src/main/java/HookItem/: AtAllMsg.java  AtMsg.java  Picture.java  Redirect.java
src/main/res/drawable/: base_layout_card.xml  base_layout_shape.xml  base_shape.xml  button_shape.xml  check_style.xml  edittext_shape.xml  item_shape.xml  linearlayoutstyle.xml  shadow_demo.xml  switch_custom_thumb_off.xml  switch_custom_thumb_on.xml  switch_custom_thumb_selector.xml  track_shape.xml  white_shape.xml
src/main/res/layout/: base_2button.xml  base_button_layout.xml  base_check_box.xml  base_edit_text.xml  base_main.xml  base_main_classify.xml  base_title_layout.xml  button_item.xml  common_edittext.xml  main_app_layout.xml  main_item_layout.xml  modify_message.xml  pic_top_layout.xml  repetition_set_params_layout.xml  save_voice_layout.xml  send_voice_layout.xml  update_menu_layout.xml  update_new_version.xml
src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml
(+108 files in other folders)
